--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,3 +3,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body, #root {
+    background: white;
+}
+
+/*body, #root {*/
+/*    !*overflow: hidden;*!*/
+/*    background-color: white;*/
+/*}*/
