Rename components with screen in name, change color of tv schedules app

--- a/frontend2/src/index.css
+++ b/frontend2/src/index.css
@@ -12,7 +12,7 @@ input[type=range].white::-webkit-slider-thumb {
 }
 
 :root {
-  --tv-schedules-app-color: #f87171;
+  --tv-schedules-app-color: #9D7EAC;
 }
 
 html {
